# InfoCubo-Tauri

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  requirements.txt
src/: App.css  App.jsx  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/backend/: constants.py  main.py  utils.py
src/backend/classes/: HiperImg.py
src/backend/routes/: envi.py  indices.py
src/backend/services/: formulas.py  hiper.py  indices.py  transformation.py
src/components/: CutPoints.jsx  ImageViewer.css  ImageViewer.jsx  LeftBar.css  LeftBar.jsx  Loader.css  Loader.jsx  Message.css  MessageIcons.jsx  OptionBelt.css  OptionBelt.jsx  Points.jsx  ToolBar.css  ToolBar.jsx
src/components/inputs/: CheckBtn.css  CheckBtn.jsx  CheckInput.css  CheckInput.jsx  DropDown.css  DropDown.jsx  IconBtn.css  IconBtn.jsx  IndicesList.css  IndicesList.jsx  MultiRangeSlider.css  MultiRangeSlider.jsx  ToggleBtn.css  ToggleBtn.jsx
src/components/tools/: InputRotation.css  InputRotation.jsx
src/components/windows/: ChannelHistogram.css  ChannelHistogram.jsx  HistogramGroup.css  HistogramGroup.jsx
src/components/windows/Dialogs/: ExportOptions.css  ExportOptions.jsx  OptionsDialogs.css  OptionsDialogs.jsx
src/context/: OptionDialog.jsx  hiperImg.jsx  tools.jsx
src/hooks/: useExportOptions.jsx  useOnResizeObserver.jsx  useOptionDialogs.jsx
src/services/: draw.js  export.js  hiper.js  indices.js  shell.js  utils.js
