[package]
name = "InfoCubo"
version = "4.1.1"
description = "InfoCubo"
authors = ["Isaac Vega"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "http-all", "fs-create-dir", "fs-read-dir", "fs-exists", "shell-execute", "dialog-save", "dialog-open", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
